add_executable(operator operator.cpp)
add_executable(store_func store_func.cpp)
add_executable(set set.cpp)
add_executable(lambda lambda.cpp)
add_executable(unordered_map unordered_map.cpp)
add_executable(pre_post pre_postfix.cpp)
add_executable(extend extend.cpp)
add_executable(enum enum.cpp)
add_executable(inline inline.cpp)
add_executable(using using.cpp)
add_executable(alloc alloc.cpp)
add_executable(string_view string_view.cpp)
add_executable(ref_wrapper ref_wrapper.cpp)
add_executable(play play.cpp)