link_libraries(util ${GTEST_BOTH_LIBRARIES})

include_directories(${GTEST_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/src)

add_executable(operator operator.cpp)
add_executable(store_func store_func.cpp)
add_executable(set set.cpp)
add_executable(lambda lambda.cpp)
add_executable(unordered_map unordered_map.cpp)
add_executable(pre_post pre_postfix.cpp)
add_executable(extend extend.cpp)
add_executable(enum enum.cpp)
add_executable(inline inline.cpp)
add_executable(using using.cpp)
add_executable(alloc alloc.cpp)
add_executable(string_view string_view.cpp)
add_executable(ref_wrapper ref_wrapper.cpp)
add_executable(play play.cpp)
add_executable(sizeof sizeof.cpp)
add_executable(fam fam.cpp)

add_executable(smart_ptr smart_ptr.cpp)
add_executable(emplace emplace.cpp)
add_executable(static static.hpp static.cpp static_init.cpp)

gtest_discover_tests(smart_ptr smart_ptr)
gtest_discover_tests(emplace emplace)
gtest_discover_tests(static static)